--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>first page</h1>
-    <p>This is a index page.</p>
+    <p>This is an index page.</p>
 </body>
 </html>
