--- a/w3modal/modal.html
+++ b/w3modal/modal.html
@@ -14,7 +14,7 @@
         <div class="w3-modal" id="modal" >
             <div class="w3-modal-content w3-animate-zoom">
 
-                <header class="w3-container w3-blue-gray">
+                <header class="w3-container w3-blue-grey">
                     <span onclick="document.getElementById('modal').style.display='none'" class="w3-span w3-hover-red w3-display-topright">&times;
                     </span>
                     <h3>Login form</h3>
